kube/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-lumen-service
  labels:
    app.kubernetes.io/name: lb-lumen-service
  namespace: lumen-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: lb-lumen-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lb-lumen-service
    spec:
      containers:
        - name: dp-lumen-service
          image: "username/images:tag"
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: "0.25"
            requests:
              memory: 256Mi
              cpu: "0.1"
