kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: dp-lumen-service
  name: dp-lumen-service
  # namespace: ns-lumen-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: dp-lumen-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dp-lumen-service
    spec:
      containers:
        - name: ct-lumen-service
          image: "uname/yourimages:tag"
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: "0.5"
            requests:
              memory: 256Mi
              cpu: "0.1"
      imagePullSecrets:
        - name: cred-test
