kube/4-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sv-lumen-service
  namespace: ns-lumen-apps
  labels:
    app.kubernetes.io/name: lb-lumen-service
  annotations:
    notes: "this is k8s sample configuration for lumen apps"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
      nodePort: 31000
  selector:
    app.kubernetes.io/name: lb-lumen-service
  type: LoadBalancer
