kube/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-lumen-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - k8s.example.com
      secretName: importir-tls
  rules:
    - host: k8s.example.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name  : sv-lumen-service
              port:
                number: 80
